syntax = "proto3";

package io.iohk.prism.protos;

message CredentialViewTemplate {
    int64 id = 1;
    string name = 2;
    // Logo image encoded in base64 as a UTF-8 string
    string encodedLogoImage = 3;
    string logoImageMimeType = 4;
    // HTML view with replaceable variables enclosed by double brackets, e.g., "{{foo.bar}}"
    string htmlTemplate = 5;
}
