syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

import "cviews_models.proto";

service CredentialViewsService {
    rpc GetCredentialViewTemplates (GetCredentialViewTemplatesRequest) returns (GetCredentialViewTemplatesResponse) {}
}

message GetCredentialViewTemplatesRequest {}

message GetCredentialViewTemplatesResponse {
    repeated CredentialViewTemplate templates = 1;
}
